# claude-trader

./: .gitignore  REVIEW_HANDOFF.md  STRATEGY_RESEARCH.md  pyproject.toml
results/: AAPL_2y_backtest_summary.txt  AAPL_2y_ensemble.txt  AAPL_2y_mean_reversion.txt  AAPL_2y_ml.txt  AAPL_2y_momentum.txt  ensemble_strategy.md  mean_reversion_strategy.md  ml_strategy.md  momentum_strategy.md  options_status.md  strategy_execution_flow.md
tests/: test_backtesting.py  test_features.py  test_paper_trading.py
trading/: config.py  main.py
trading/backtesting/: engine.py
trading/data/: fetcher.py
trading/features/: engineering.py
trading/paper_trading/: ibkr.py
trading/risk/: manager.py
trading/strategies/: base.py  ensemble.py  mean_reversion.py  ml_strategy.py  momentum.py
