[project]
name = "trading-analyzer"
version = "0.1.0"
description = "Stock trading analyzer with backtesting, ML signals, and IBKR paper trading"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.36",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "ib_insync>=0.9.86",
    "ta>=0.11.0",
    "matplotlib>=3.8.0",
    "polars>=1.0.0",
    "numpy>=1.26.0",
    "loguru>=0.7.0",
    "pydantic-settings>=2.0.0",
    "pyarrow>=14.0.0",
]

[tool.ruff]
line-length = 120
